--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "daisyui": "^5.0.35",
     "lucide-react": "^0.518.0",
     "next": "15.3.2",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
